Fix ntcorejni not found